--- a/public/style.css
+++ b/public/style.css
@@ -105,3 +105,10 @@
       display: flex;
       justify-content: space-between;
   }
+
+  .output-message img {
+      margin: 10px;
+      border-radius: 50%;
+      width: 2rem;
+  }
+
